--- a/docker/openvswitch/Dockerfile
+++ b/docker/openvswitch/Dockerfile
@@ -18,6 +18,9 @@
 
 FROM ubuntu:20.04
 
+RUN apt update \
+&& RUNLEVEL=1 apt install -y --no-install-recommends openvswitch-switch sudo net-tools iproute2 iputils-ping nano iptables wget unzip libpcap-dev tcpdump sudo default-jdk
+
 # Start setup
 COPY setup.sh .
 RUN chmod +x setup.sh\
