--- a/demonstration/serverconfig.ini
+++ b/demonstration/serverconfig.ini
@@ -7,7 +7,7 @@ file = 192.168.100.2
 print = 192.168.210.1
 web = 192.168.100.3
 seafile = 192.168.50.1
-seafolder = ef2c0c74-5d13-4263-a6f3-c4de6ce351ba
+seafolder = 
 
 [200]
 mail = 192.168.100.1
@@ -15,14 +15,14 @@ file = 192.168.100.2
 print = 192.168.200.1
 web = 192.168.100.3
 seafile = 192.168.50.1
-seafolder = ef2c0c74-5d13-4263-a6f3-c4de6ce351ba
+seafolder = 
 
 [50]
 mail = 192.168.100.1
 file = 192.168.100.2
 web = 192.168.50.2
 seafile = 192.168.50.1
-seafolder = ef2c0c74-5d13-4263-a6f3-c4de6ce351ba
+seafolder = 
 
 [220]
 mail = 192.168.100.1
@@ -30,5 +30,5 @@ file = 192.168.100.2
 print = 192.168.220.1
 web = 192.168.100.3
 seafile = 192.168.50.1
-seafolder = ef2c0c74-5d13-4263-a6f3-c4de6ce351ba
+seafolder = 
 
