--- a/docker/openvswitch/Dockerfile
+++ b/docker/openvswitch/Dockerfile
@@ -22,6 +22,7 @@ RUN apt update \
 && RUNLEVEL=1 apt install -y --no-install-recommends openvswitch-switch sudo net-tools iproute2 iputils-ping nano iptables wget unzip tcpdump sudo default-jdk libpcap-dev
 
 # Start setup
+COPY CICFlowMeter .
 COPY setup.sh .
 RUN chmod +x setup.sh\
 && ./setup.sh
