--- a/docker/openvswitch/Dockerfile
+++ b/docker/openvswitch/Dockerfile
@@ -24,6 +24,7 @@ RUN apt update \
 # Start setup
 COPY CICFlowMeter .
 COPY convert_pcap_csv.sh .
+COPY capture_interface_pcap.sh .
 COPY setup.sh .
 RUN chmod +x setup.sh\
 && ./setup.sh
