--- a/docker/openswitch2/Dockerfile
+++ b/docker/openswitch2/Dockerfile
@@ -19,12 +19,7 @@
 FROM ubuntu:20.04
 
 RUN apt update \
-&& RUNLEVEL=1 apt install -y --no-install-recommends openvswitch-switch sudo net-tools iproute2 iputils-ping nano iptables wget unzip tcpdump sudo default-jdk libpcap-dev
-
-# Start setup
-COPY setup.sh .
-RUN chmod +x setup.sh\
-&& ./setup.sh
+&& RUNLEVEL=1 apt install -y --no-install-recommends openvswitch-switch sudo net-tools iproute2 iputils-ping nano iptables tshark
 
 COPY onboot.sh /home
 RUN chmod +x /home/onboot.sh
